# mafia_bot-tg

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
deploy/: Caddyfile
mafia_bot/: __main__.py  app.py  config.py
mafia_bot/bot/: middleware.py  telegram_features.py
mafia_bot/bot/routers/: admin.py  common.py  games.py
mafia_bot/database/: models.py  session.py
mafia_bot/domain/: roles.py
mafia_bot/services/: dashboard.py  games.py  roles.py
mafia_bot/web/: app.py
scripts/: deploy.sh
tests/: test_dashboard.py  test_game_flow.py  test_roles.py  test_telegram_features.py
