[project]
name = "telegram-mafia-bot"
version = "0.1.0"
description = "Customizable Telegram Mafia game bot"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.28,<4.0",
    "aiosqlite>=0.20",
    "fastapi>=0.115",
    "pydantic-settings>=2.8",
    "SQLAlchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mafia_bot*"]
